--- a/style.css
+++ b/style.css
@@ -95,4 +95,41 @@
     margin-bottom: 20px;
     font-size: 24px;
   }
+  /* O CSS permanece o mesmo, mas adiciona bordas vermelhas em campos inválidos */
+input.error, select.error {
+    border: 2px solid red;
+  }
   
+  button {
+    width: 100%;
+    padding: 10px;
+    background-color: #28a745;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+  }
+  
+  button:hover {
+    background-color: #218838;
+  }
+  #title-results {
+    font-size: 2.1rem;
+  }
+
+  #myChart {
+    margin-top: 20px;
+    max-width: 300px;
+    max-height: 300px;
+    margin: 0 auto; /* Centraliza o gráfico */
+  }
+  #result-text {
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+  }
+  #total-cost {
+    font-size: 2.1rem;
+    color: #c6402f;
+    padding-top: 20rem;
+  }
