--- a/style.css
+++ b/style.css
@@ -1,135 +1,155 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Varela', sans-serif;
-  }
-  
-  body {
-    font-family: 'Varela', sans-serif;
-  }
-  
-  header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #000;
-    padding: 20px;
-  }
-  
-  .logo img {
-    height: 40px;
-  }
-  
-  nav ul {
-    display: flex;
-    list-style: none;
-  }
-  
-  nav ul li {
-    margin-left: 20px;
-  }
-  
-  nav ul li a {
-    color: #fff;
-    text-decoration: none;
-    font-size: 16px;
-  }
-  
-  nav ul li a:hover {
-    text-decoration: underline;
-  }
-  
-  .container {
-    display: flex;
-    justify-content: space-between;
-    padding: 20px;
-  }
-  
-  .inputs-column, .results-column {
-    flex: 1;
-    margin-right: 20px;
-  }
-  
-  .inputs-column {
-    max-width: 400px;
-  }
-  
-  .results-column {
-    flex-grow: 2;
-    background-color: #f4f4f4;
-    padding: 20px;
-    border-radius: 8px;
-  }
-  
-  label {
-    display: block;
-    margin-bottom: 5px;
-    font-weight: bold;
-  }
-  
-  input, select {
-    width: 100%;
-    padding: 8px;
-    margin-bottom: 15px;
-    border-radius: 4px;
-    border: 1px solid #ccc;
-  }
-  
-  button {
-    width: 100%;
-    padding: 10px;
-    background-color: #28a745;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    font-size: 16px;
-    cursor: pointer;
-  }
-  
-  button:hover {
-    background-color: #218838;
-  }
-  
-  h2 {
-    margin-bottom: 20px;
-    font-size: 24px;
-  }
-  /* O CSS permanece o mesmo, mas adiciona bordas vermelhas em campos inválidos */
-input.error, select.error {
-    border: 2px solid red;
-  }
-  
-  button {
-    width: 100%;
-    padding: 10px;
-    background-color: #28a745;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    font-size: 16px;
-    cursor: pointer;
-  }
-  
-  button:hover {
-    background-color: #218838;
-  }
-  #title-results {
-    font-size: 2.1rem;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Varela', sans-serif;
+}
 
-  #myChart {
-    margin-top: 20px;
-    max-width: 300px;
-    max-height: 300px;
-    margin: 0 auto; /* Centraliza o gráfico */
-  }
-  #result-text {
-    padding-top: 1.5rem;
-    padding-bottom: 1.5rem;
-  }
-  #total-cost {
-    font-size: 2.1rem;
-    color: #c6402f;
-    padding-top: 20rem;
-  }
+body {
+  font-family: 'Varela', sans-serif;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #000;
+  padding: 20px;
+}
+
+.logo img {
+  height: 40px;
+}
+
+nav ul {
+  display: flex;
+  list-style: none;
+}
+
+nav ul li {
+  margin-left: 20px;
+}
+
+nav ul li a {
+  color: #fff;
+  text-decoration: none;
+  font-size: 16px;
+}
+
+nav ul li a:hover {
+  text-decoration: underline;
+}
+
+.container {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+}
+
+.inputs-column, .results-column {
+  flex: 1;
+  margin-right: 20px;
+}
+
+.inputs-column {
+  max-width: 400px;
+}
+
+.results-column {
+  flex-grow: 2;
+  background-color: #f4f4f4;
+  padding: 20px;
+  border-radius: 8px;
+}
+
+label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+input, select {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 15px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+}
+
+button {
+  width: 100%;
+  padding: 10px;
+  background-color: #28a745;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #218838;
+}
+
+h2 {
+  margin-bottom: 20px;
+  font-size: 24px;
+}
+
+/* O CSS permanece o mesmo, mas adiciona bordas vermelhas em campos inválidos */
+input.error, select.error {
+  border: 2px solid red;
+}
+
+#title-results {
+  font-size: 2.1rem;
+}
+
+#myChart {
+  margin-top: 20px;
+  max-width: 300px;
+  max-height: 300px;
+  margin: 0 auto; /* Centraliza o gráfico */
+}
+
+#result-text {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+#revenue-label {
+  padding-top: 3rem;
+
+}
+
+#total-cost {
+  font-size: 2.1rem;
+  color: #c6402f;
+  padding-top: 20rem;
+}
+
+.charts-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 20px;
+}
+
+#myPieChart, #cashFlowChart {
+  max-width: 500px;
+  max-height: 250px;
+}
+
+#npv-div
+{
+  text-align: right;
+
+}
+
+#npv {
+  font-size: 1.5rem;
+  color: #000000;
+  padding-top: 20rem;
+  padding-right: 7rem;
+
+}
