--- a/style.css
+++ b/style.css
@@ -111,6 +111,25 @@ input.error, select.error {
   max-height: 300px;
   margin: 0 auto; /* Centraliza o gráfico */
 }
+#restorationCostsChart {
+  margin-top: 20px;
+  max-width: 300px;
+  max-height: 300px;
+  margin: 0 auto; /* Centraliza o gráfico */
+}
+
+#cashFlowChart {
+  margin-top: 20px;
+  max-width: 300px;
+  max-height: 300px;
+  margin: 0 auto; /* Centraliza o gráfico */
+}
+#carbonLineChart {
+  margin-top: 20px;
+  max-width: 300px;
+  max-height: 300px;
+  margin: 0 auto; /* Centraliza o gráfico */
+}
 
 #result-text {
   padding-top: 1.5rem;
@@ -135,7 +154,12 @@ input.error, select.error {
   margin-top: 20px;
 }
 
-#myPieChart, #cashFlowChart {
+#restorationCostsChart, #myChart {
+  max-width: 300px;
+  max-height: 300px;
+}
+
+#carbonLineChart, #cashFlowChart {
   max-width: 500px;
   max-height: 250px;
 }
@@ -143,7 +167,13 @@ input.error, select.error {
 #npv-div
 {
   text-align: right;
-
+  font-weight: bold;
+  font-size: 1.5rem;
+  color: #000000;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  padding-right: 9rem;
+  
 }
 
 #npv {
@@ -153,3 +183,4 @@ input.error, select.error {
   padding-right: 7rem;
 
 }
+
